# MLOoops

./: .gitignore  Dockerfile  README.md  app.py  convert_model_to_onnx.py  data.py  get_dvc_onnx_model.py  inference_onnx.py  model.py  pyproject.toml  requirements_inference.txt  train.py  utils.py
.dvc/: config
.github/workflows/: mlops.yaml
k8s/: deploy_app.yaml
mlruns/0/: meta.yaml
models/: model.onnx.dvc
monitoring/elasticsearch/: values.yml
monitoring/filebeat/: values.yml
