[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Safarveisi <sajad.safarveisi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.4.0"
datasets = "^2.21.0"
transformers = "^4.44.2"
scikit-learn = "^1.5.1"
tensorboardx = "^2.6.2.2"
wandb = "^0.17.8"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
onnx = "^1.16.2"
onnxruntime = "^1.19.2"
dvc = {extras = ["s3"], version = "^3.55.2"}
mlflow = "^2.16.0"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
black = {extras = ["jupyter"], version = "^24.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
